# cv-performance-dashboard

./: .eslintrc.cjs  .gitignore  CLAUDE.md  CLI_FRAMEWORK_AUDIT.md  CLI_FRAMEWORK_GOLIVE_BRIEF.md  COMPLETION_BRIEF.md  DECISION_REGISTER.md  GO_LIVE.md  HANDOFF.md  HARNESS_CHARTER.md  HUB_CONVERGENCE_PLAN.md  IMPLEMENTATION_STATUS.md  MAKE_REMEDIATION_PRD.md  MEMORY_OS_PRD.md  OPERATOR_ACTION_ITEMS.md  SECURITY.md  TRANSFORMATION_PLAN.md  WRITE_VERIFICATION_CONTRACT.md  index.html  package-lock.json  package.json  render.yaml  tailwind.config.js  vercel.json  vite.config.js  vitest.config.js
.claude/: launch.json  settings.json.example
.claude/agent-memory/: STATE.md
.claude/hooks/: block-dangerous.sh
.github/: dependabot.yml
.github/workflows/: ci-caller.yml.disabled  ci.yml  publish-shared-packages.yml  vendor-drift.yml
api/: check_db.js  check_db2.js  db-sqlite.js  db.js  index.js  package-lock.json  package.json  scheduler.js  seed.js  server.js
api/bench/: memoryRecall.bench.js
api/connectors/: bingAds.js  callrail.js  ga4.js  gbp.js  ghl.js  lsa.js  (+4 more)
public/: demoFixtures.json
scripts/: smoke-write-verification.mjs  verify-memory-os.sh  verify-write-verification.sh
shared-kit/: .npmrc.example  AUTONOMY_SPEC.md  CROSS_REPO_PLAYBOOK.md  PACKAGES.md  README.md  UNIFICATION_FINDINGS.md
shared-kit/compaction-py/: NOTICE  README.md  cache_align.py  compaction.py  pyproject.toml
shared-kit/compaction-py/tests/: test_smoke.py
shared-kit/memory-os-py/: README.md  memory_os.py  pyproject.toml  schema.sqlite.sql  test_smoke.py
src/: App.jsx  index.css
(+470 files in other folders)
